--- a/ultralytics/cfg/models/v8/test2_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/test2_rtdetr.yaml
@@ -11,7 +11,7 @@ backbone:
   - [1, 1, Index, [768, 8]]  #  (1, 768, 20, 20) - 4
   
   # Swin track
-  - [0, 1, TorchVision, [768, swin_v2_t, DEFAULT, True, 4, True]] #5
+  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #5
   - [-1, 1, Index, [192 ,4]] #6
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 192, 80, 80)
   - [5, 1, Index, [384, 6]] #8
