--- a/ultralytics/cfg/models/v8/test3.yaml
+++ b/ultralytics/cfg/models/v8/test3.yaml
@@ -11,10 +11,9 @@ backbone:
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #5 (1, 384, 40, 40)
   - [1, 1, Index, [768, 9]] #6
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 768, 20, 20)
-  - [-1, 1, Conv, [768, 3, 2]] #8  (768, 10, 10)
+  - [-1, 1, DWConv, [768, 3, 2]] #8  (768, 10, 10)
   - [-1, 2, DWC3k2, [768, False, 0.25]] #9
-  - [-1, 1, Conv, [1024, 3, 2]] #10  (1024, 5, 5)
+  - [-1, 1, DWConv, [1024, 3, 2]] #10  (1024, 5, 5)
   - [-1, 2, DWC3k2, [1024, True]] #11
-  - [-1, 1, SPPF, [1024, 5]] #12
 head:
   - [[11, 8, 7, 5, 3], 1, Detect, [nc]]
