--- a/ultralytics/cfg/models/v8/test3.yaml
+++ b/ultralytics/cfg/models/v8/test3.yaml
@@ -6,14 +6,42 @@ backbone:
   # Swin track
   - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #1
   - [-1, 1, Index, [192 ,4]] #2
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3 (1, 192, 80, 80)
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3 (1, 192, 80, 80) P1 
   - [1, 1, Index, [384, 6]] #4
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #5 (1, 384, 40, 40)
-  - [1, 1, Index, [768, 9]] #6
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 768, 20, 20)
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #5 (1, 384, 40, 40) P2
+  - [1, 1, Index, [768, 9]] #6 
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 768, 20, 20) P3
   - [-1, 1, DWConv, [768, 3, 2]] #8  (768, 10, 10)
-  - [-1, 2, DWC3k2, [768, False, 0.25]] #9
+  - [-1, 2, DWC3k2, [768, False, 0.25]] #9 (768, 10, 10) P4
   - [-1, 1, DWConv, [1024, 3, 2]] #10  (1024, 5, 5)
-  - [-1, 2, DWC3k2, [1024, True]] #11
+  - [-1, 2, DWC3k2, [1024, True]] #11 (1024, 5, 5)
+  - [-1, 1, EMA, [1024]] #12 P5
 head:
-  - [[11, 7, 5], 1, Detect, [nc]]
+  #make channels equal
+  -[3, -1, DWConv, [512]] # 13 (1, 512, 80, 80) P3
+  -[5, -1, DWConv, [512]] # 14 (1, 512, 40, 40) P4
+  -[7, -1, DWConv, [512]] # 15 (1, 512, 20, 20) P5
+  -[9, -1, DWConv, [512]] # 16 (1, 512, 10, 10) P6
+  -[12, -1, DWConv, [512]] # 17 (1, 512, 5, 5) P7
+
+#BiFPN
+  - [-1, nn.Upsample, [None, 2, "nearest"] #18 (1, 512, 10, 10)
+  - [[-1, 16], BiFPN_Concat2, [1]] #19 (1, 512, 10, 10)
+  - [-1, DepthwiseConvBlock, [512, 3, 1]] #20 (1, 512, 10, 10)
+
+  
+  - [-1, nn.Upsample, [None, 2, "nearest"] #21 (1, 512, 20, 20)
+  - [[-1, 15], BiFPN_Concat2, [1]] #22 (1, 512, 20, 20)
+  - [-1, DepthwiseConvBlock, [512, 3, 1]] #23 (1, 512, 20, 20)
+
+  
+  - [-1, nn.Upsample, [None, 2, "nearest"] #24 (1, 512, 40, 40)
+  - [[-1, 14], BiFPN_Concat2, [1]] #25 (1, 512, 40, 40)
+  - [-1, DepthwiseConvBlock, [512, 3, 1]] #26 (1, 512, 40, 40)
+
+  
+  - [-1, nn.Upsample, [None, 2, "nearest"] #27 (1, 512, 80, 80)
+  - [[-1, 13], BiFPN_Concat2, [1]] #28 (1, 512, 80, 80)
+  - [-1, DepthwiseConvBlock, [512, 3, 1]] #29 (1, 512, 80, 80)
+  
+  - [[29, 26, 23, 20], 1, Detect, [nc]] #20
