--- a/ultralytics/cfg/models/v8/test4.yaml
+++ b/ultralytics/cfg/models/v8/test4.yaml
@@ -63,4 +63,4 @@ head:
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #41 (1, 512, 5, 5)
   - [-1, 1, DepthwiseConvBlock, [384, 3, 1, 0.999, 1e-4]] #20 (1, 512, 10, 10)
   
-  - [[41, 38, 35, 32, 29], 1, RTDETRDecoder, [nc]] #90
+  - [[41, 38, 35, 32, 29], 1, Detect, [nc]] #90
