--- a/ultralytics/cfg/models/v8/test4.yaml
+++ b/ultralytics/cfg/models/v8/test4.yaml
@@ -32,36 +32,36 @@ head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #21 (1, 512, 20, 20)
   - [[-1, 15], 1, BiFPN_Concat2, [1]] #22 (1, 512, 20, 20)
   - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #23 (1, 512, 20, 20)
-  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1, 0.999, 1e-4]] #20 (1, 512, 10, 10)
+  - [-1, 1, DepthwiseConvBlock, [384, 3, 1, None, 1, True, 0.999, 1e-4]] #20 (1, 512, 10, 10)
   
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #24 (1, 512, 40, 40)
   - [[-1, 14], 1, BiFPN_Concat2, [1]] #25 (1, 512, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #26 (1, 512, 40, 40)
-  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1, 0.999, 1e-4]] #20 (1, 512, 10, 10)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #26 (1, 512, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [384, 3, 1, None, 1, True, 0.999, 1e-4]] #20 (1, 512, 10, 10)
   
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #27 (1, 512, 80, 80)
   - [[-1, 13], 1, BiFPN_Concat2, [1]] #28 (1, 512, 80, 80)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #29 (1, 512, 80, 80)
-  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1, 0.999, 1e-4]] #20 (1, 512, 10, 10)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #29 (1, 512, 80, 80)
+  - [-1, 1, DepthwiseConvBlock, [384, 3, 1, None, 1, True, 0.999, 1e-4]] #20 (1, 512, 10, 10)
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #30 (1, 512, 40, 40)
   - [[-1, 26, 14], 1, BiFPN_Concat3, [1]] #31 (1, 512, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #32 (1, 512, 40, 40)
-  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1, 0.999, 1e-4]] #20 (1, 512, 10, 10)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #32 (1, 512, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [384, 3, 1, None, 1, True, 0.999, 1e-4]] #20 (1, 512, 10, 10)
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #33 (1, 512, 20, 20)
   - [[-1, 23, 15], 1, BiFPN_Concat3, [1]] #34 (1, 512, 20, 20)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #35 (1, 512, 20, 20)
-  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1, 0.999, 1e-4]] #20 (1, 512, 10, 10)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #35 (1, 512, 20, 20)
+  - [-1, 1, DepthwiseConvBlock, [384, 3, 1, None, 1, True, 0.999, 1e-4]] #20 (1, 512, 10, 10)
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #36 (1, 512, 10, 10)
   - [[-1, 20, 16], 1, BiFPN_Concat3, [1]] #37 (1, 512, 10, 10)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #38 (1, 512, 10, 10)
-  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1, 0.999, 1e-4]] #20 (1, 512, 10, 10)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #38 (1, 512, 10, 10)
+  - [-1, 1, DepthwiseConvBlock, [384, 3, 1, None, 1, True, 0.999, 1e-4]] #20 (1, 512, 10, 10)
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #39 (1, 512, 5, 5)
   - [[-1, 17], 1, BiFPN_Concat2, [1]] #40 (1, 512, 5, 5)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #41 (1, 512, 5, 5)
-  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1, 0.999, 1e-4]] #20 (1, 512, 10, 10)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #41 (1, 512, 5, 5)
+  - [-1, 1, DepthwiseConvBlock, [384, 3, 1, None, 1, True, 0.999, 1e-4]] #20 (1, 512, 10, 10)
   
   - [[41, 38, 35, 32, 29], 1, Detect, [nc]] #90
