--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -1,6 +1,6 @@
 nc: 2
 scales: # model compound scaling constants, i.e. 'model=yolov8n.yaml' will call yolov8.yaml with scale 'n'
-  l: [1.00, 1.00, 1024] # YOLOv8l summary: 365 layers, 43691520 parameters, 43691504 gradients, 165.7 GFLOPs
+  l: [1.00, 1.00, 256] # YOLOv8l summary: 365 layers, 43691520 parameters, 43691504 gradients, 165.7 GFLOPs
 
 # YOLOv8.0n backbone
 backbone:
@@ -42,20 +42,21 @@ backbone:
 
 # YOLOv8.0n head
 head:
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #16
-  - [[-1, 14], 1, Concat, [1]] # 17
-  - [-1, 3, C3k2, [512]] # 18
+  - [-1, 1, nn.Identity, []]
+#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #16
+#   - [[-1, 14], 1, Concat, [1]] # 17
+#   - [-1, 3, DWC3k2, [512]] # 18
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #19
-  - [[-1, 11], 1, Concat, [1]] # 20
-  - [-1, 3, C3k2, [256]] # 21
+#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #19
+#   - [[-1, 11], 1, Concat, [1]] # 20
+#   - [-1, 3, DWC3k2, [256]] # 21
 
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #22
-  - [[-1, 18], 1, Concat, [1]] # 23
-  - [-1, 3, C3k2, [512, True]] # 24
+#   - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #22
+#   - [[-1, 18], 1, Concat, [1]] # 23
+#   - [-1, 3, DWC3k2, [512, True]] # 24
 
-  - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #25
-  - [[-1, 15], 1, Concat, [1]] # 26
-  - [-1, 3, C3k2, [1024, True]] # 27
+#   - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #25
+#   - [[-1, 15], 1, Concat, [1]] # 26
+#   - [-1, 3, DWC3k2, [1024, True]] # 27
 
-  - [[27, 24, 21], 1, Detect, [nc]] # 28
+#   - [[27, 24, 21], 1, Detect, [nc]] # 28
