--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -15,17 +15,17 @@ backbone:
   - [1, 1, Index, [768, 9]] #6 
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 768, 20, 20) 
   - [-1, 1, EMA, [768]] #8 multiscale 3
-  # #CNN
-  # - [0, 1, DWConv, [64, 3, 2]] # (1, 64, 320, 320) 9
-  # - [-1, 1, DWConv, [128, 3, 2]] # (1, 128, 160, 160) 10
-  # - [-1, 3, DWC3k2, [128, True]] # (1, 128, 160, 160) 11
-  # - [-1, 1, DWConv, [256, 3, 2]] # (1, 256, 80, 80) 12
-  # - [-1, 6, DWC3k2, [256, True]] # (1, 256, 80, 80) 13 multiscale 1
-  # - [-1, 1, DWConv, [512, 3, 2]] # (1, 512, 40, 40) 14
-  # - [-1, 6, DWC3k2, [512, True]] # (1, 512, 40, 40) 15 multiscale 2
-  # - [-1, 1, DWConv, [1024, 3, 2]] # (1, 1024, 20, 20) 16
-  # - [-1, 3, DWC3k2, [1024, True]] # (1, 1024, 20, 20) 17
-  # - [-1, 1, EMA, [1024]] #(1, 1024, 20, 20) 18 multiscale 3
+  #CNN
+  - [0, 1, DWConv, [64, 3, 2]] # (1, 64, 320, 320) 9
+  - [-1, 1, DWConv, [128, 3, 2]] # (1, 128, 160, 160) 10
+  - [-1, 3, DWC3k2, [128, True]] # (1, 128, 160, 160) 11
+  - [-1, 1, DWConv, [256, 3, 2]] # (1, 256, 80, 80) 12
+  - [-1, 6, DWC3k2, [256, True]] # (1, 256, 80, 80) 13 multiscale 1
+  - [-1, 1, DWConv, [512, 3, 2]] # (1, 512, 40, 40) 14
+  - [-1, 6, DWC3k2, [512, True]] # (1, 512, 40, 40) 15 multiscale 2
+  - [-1, 1, DWConv, [1024, 3, 2]] # (1, 1024, 20, 20) 16
+  - [-1, 3, DWC3k2, [1024, True]] # (1, 1024, 20, 20) 17
+  - [-1, 1, EMA, [1024]] #(1, 1024, 20, 20) 18 multiscale 3
 
   # #Concat
   # - [3, 1, DWConv, [128, 1, 1]] #9 (1, 192, 80, 80) -> (1, 128, 80, 80)
