--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -42,21 +42,20 @@ backbone:
 
 # YOLOv8.0n head
 head:
-  - [-1, 1, nn.Identity, []]
-#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #16
-#   - [[-1, 14], 1, Concat, [1]] # 17
-#   - [-1, 3, DWC3k2, [512]] # 18
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #28
+  - [[-1, 24], 1, Concat, [1]] # 29
+  - [-1, 3, DWC3k2, [512]] # 30
 
-#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #19
-#   - [[-1, 11], 1, Concat, [1]] # 20
-#   - [-1, 3, DWC3k2, [256]] # 21
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #31
+  - [[-1, 21], 1, Concat, [1]] # 32
+  - [-1, 3, DWC3k2, [256]] # 33
 
-#   - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #22
-#   - [[-1, 18], 1, Concat, [1]] # 23
-#   - [-1, 3, DWC3k2, [512, True]] # 24
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #34
+  - [[-1, 30], 1, Concat, [1]] # 35
+  - [-1, 3, DWC3k2, [512, True]] # 36
 
-#   - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #25
-#   - [[-1, 15], 1, Concat, [1]] # 26
-#   - [-1, 3, DWC3k2, [1024, True]] # 27
+  - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #37
+  - [[-1, 27], 1, Concat, [1]] # 38
+  - [-1, 3, DWC3k2, [1024, True]] # 39
 
-#   - [[27, 24, 21], 1, Detect, [nc]] # 28
+  - [[29, 26, 33], 1, Detect, [nc]] # 40
