--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -15,34 +15,24 @@ backbone:
   # Swin track
   - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #1
   - [-1, 1, Index, [192 ,4]] #2
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3 (1, 192, 80, 80) multiscale 1
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3 (1, 192, 80, 80) multiscale 1 (64)
   - [1, 1, Index, [384, 6]] #4
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #5 (1, 384, 40, 40) multiscale 2
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #5 (1, 384, 40, 40) multiscale 2 (128)
   - [1, 1, Index, [768, 9]] #6 
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 768, 20, 20) 
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 768, 20, 20) (256)
   # - [-1, 1, EMA, [768]] #8 multiscale 3
-  - [-1, 1, EMA, [384]] #8 multiscale 3
-  #CNN
-  # - [0, 1, DWConv, [64, 3, 2]] # (1, 64, 320, 320) 9
-  # - [-1, 1, DWConv, [128, 3, 2]] # (1, 128, 160, 160) 10
-  # - [-1, 3, DWC3k2, [128, True]] # (1, 128, 160, 160) 11
-  # - [-1, 1, DWConv, [256, 3, 2]] # (1, 256, 80, 80) 12
-  # - [-1, 6, DWC3k2, [256, True]] # (1, 256, 80, 80) 13 multiscale 1
-  # - [-1, 1, DWConv, [512, 3, 2]] # (1, 512, 40, 40) 14
-  # - [-1, 6, DWC3k2, [512, True]] # (1, 512, 40, 40) 15 multiscale 2
-  # - [-1, 1, DWConv, [1024, 3, 2]] # (1, 1024, 20, 20) 16
-  # - [-1, 3, DWC3k2, [1024, True]] # (1, 1024, 20, 20) 17
-  # - [-1, 1, EMA, [1024]] #(1, 1024, 20, 20) 18 multiscale 3
-  - [0, 1, DWConv, [32, 3, 2]] # (1, 32, 320, 320) 9
-  - [-1, 1, DWConv, [64, 3, 2]] # (1, 64, 160, 160) 10
-  - [-1, 3, DWC3k2, [64, True]] # (1, 64, 160, 160) 11
-  - [-1, 1, DWConv, [128, 3, 2]] # (1, 128, 80, 80) 12
-  - [-1, 6, DWC3k2, [128, True]] # (1, 128, 80, 80) 13 multiscale 1
-  - [-1, 1, DWConv, [256, 3, 2]] # (1, 256, 40, 40) 14
-  - [-1, 6, DWC3k2, [256, True]] # (1, 256, 40, 40) 15 multiscale 2
-  - [-1, 1, DWConv, [512, 3, 2]] # (1, 512, 20, 20) 16
-  - [-1, 3, DWC3k2, [512, True]] # (1, 512, 20, 20) 17
-  - [-1, 1, EMA, [512]] #(1, 512, 20, 20) 18 multiscale 3
+  - [-1, 1, EMA, [192]] #8 multiscale 3
+  # CNN
+  - [0, 1, DWConv, [64, 3, 2]] # (1, 64, 320, 320) 9 (24)
+  - [-1, 1, DWConv, [128, 3, 2]] # (1, 128, 160, 160) 10 (48)
+  - [-1, 3, DWC3k2, [128, True]] # (1, 128, 160, 160) 11 (48))
+  - [-1, 1, DWConv, [256, 3, 2]] # (1, 256, 80, 80) 12 (88))
+  - [-1, 6, DWC3k2, [256, True]] # (1, 256, 80, 80) 13 multiscale 1 (88)
+  - [-1, 1, DWConv, [512, 3, 2]] # (1, 512, 40, 40) 14 (168)
+  - [-1, 6, DWC3k2, [512, True]] # (1, 512, 40, 40) 15 multiscale 2 (168)
+  - [-1, 1, DWConv, [1024, 3, 2]] # (1, 1024, 20, 20) 16 (344)
+  - [-1, 3, DWC3k2, [1024, True]] # (1, 1024, 20, 20) 17 (344)
+  - [-1, 1, EMA, [1024]] #(1, 1024, 20, 20) 18 multiscale 3 (344)
 
   # #Concat
   - [3, 1, DWConv, [128, 1, 1]] #19 (1, 192, 80, 80) -> (1, 128, 80, 80)
@@ -59,20 +49,21 @@ backbone:
 
 # YOLOv8.0n head
 head:
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #28
-  - [[-1, 24], 1, Concat, [1]] # 29
-  - [-1, 3, DWC3k2, [512]] # 30
+  - [-1, 1, nn.Identity, []]
+  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #28
+  # - [[-1, 24], 1, Concat, [1]] # 29
+  # - [-1, 3, DWC3k2, [512]] # 30
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #31
-  - [[-1, 21], 1, Concat, [1]] # 32
-  - [-1, 3, DWC3k2, [256]] # 33
+  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #31
+  # - [[-1, 21], 1, Concat, [1]] # 32
+  # - [-1, 3, DWC3k2, [256]] # 33
 
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #34
-  - [[-1, 30], 1, Concat, [1]] # 35
-  - [-1, 3, DWC3k2, [512, True]] # 36
+  # - [-1, 1, DepthwiseConvBlock, [256, 3, 2]] #34
+  # - [[-1, 30], 1, Concat, [1]] # 35
+  # - [-1, 3, DWC3k2, [512, True]] # 36
 
-  - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #37
-  - [[-1, 27], 1, Concat, [1]] # 38
-  - [-1, 3, DWC3k2, [1024, True]] # 39
+  # - [-1, 1, DepthwiseConvBlock, [512, 3, 2]] #37
+  # - [[-1, 27], 1, Concat, [1]] # 38
+  # - [-1, 3, DWC3k2, [1024, True]] # 39
 
-  - [[29, 26, 33], 1, Detect, [nc]] # 40
+  # - [[29, 26, 33], 1, Detect, [nc]] # 40
