--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -32,20 +32,23 @@ backbone:
   - [-1, 6, DWC3k2, [512, True]] # (1, 512, 40, 40) 15 multiscale 2 (168)
   - [-1, 1, DWConv, [1024, 3, 2]] # (1, 1024, 20, 20) 16 (344)
   - [-1, 3, DWC3k2, [1024, True]] # (1, 1024, 20, 20) 17 (344)
-  - [-1, 1, EMA, [1024]] #(1, 1024, 20, 20) 18 multiscale 3 (344)
+  - [-1, 1, EMA, [256]] #(1, 1024, 20, 20) 18 multiscale 3 (344)
 
   # #Concat
-  - [3, 1, DWConv, [128, 1, 1]] #19 (1, 192, 80, 80) -> (1, 128, 80, 80)
-  - [13, 1, DWConv, [128, 1, 1]] #20 (1, 256, 80, 80) -> (1, 128, 80, 80)
-  - [[19, 20], 1, Concat, [1]] # 21 (1, 256, 80, 80)
+  # - [3, 1, DWConv, [128, 1, 1]] #19 (1, 192, 80, 80) -> (1, 128, 80, 80)
+  # - [13, 1, DWConv, [128, 1, 1]] #20 (1, 256, 80, 80) -> (1, 128, 80, 80)
+  - [[3, 13], 1, Concat, [1]] # 21 (1, 256, 80, 80)
+  - [-1, 1, EMA, [192]] #8 multiscale 3
 
-  - [5, 1, DWConv, [128, 1, 1]] #22 (1, 384, 40, 40) -> (1, 128, 40, 40)
-  - [15, 1, DWConv, [128, 1, 1]] # 23 (1, 512, 40, 40) -> (1, 128, 40, 40)
-  - [[22, 23], 1, Concat, [1]] # 24 (1, 256, 40, 40)
+  # - [5, 1, DWConv, [128, 1, 1]] #22 (1, 384, 40, 40) -> (1, 128, 40, 40)
+  # - [15, 1, DWConv, [128, 1, 1]] # 23 (1, 512, 40, 40) -> (1, 128, 40, 40)
+  - [[5, 15], 1, Concat, [1]] # 24 (1, 256, 40, 40)
+  - [-1, 1, EMA, [192]] #8 multiscale 3
 
-  - [8, 1, DWConv, [256, 1, 1]] #25 (1, 768, 20, 20) -> (1, 256, 20, 20)
-  - [18, 1, DWConv, [256, 1, 1]] #26 (1, 1024, 20, 20) -> (1, 256, 20, 20)
-  - [[25, 26], 1, Concat, [1]] #27 (1, 512, 20, 20)
+  # - [8, 1, DWConv, [256, 1, 1]] #25 (1, 768, 20, 20) -> (1, 256, 20, 20)
+  # - [18, 1, DWConv, [256, 1, 1]] #26 (1, 1024, 20, 20) -> (1, 256, 20, 20)
+  - [[8, 18], 1, Concat, [1]] #27 (1, 512, 20, 20)
+  - [-1, 1, EMA, [192]] #8 multiscale 3
 
 # YOLOv8.0n head
 head:
