--- a/ultralytics/cfg/models/Test/swin_conv_DWC3k2_ECA_BiFPN_head_5inp.yaml
+++ b/ultralytics/cfg/models/Test/swin_conv_DWC3k2_ECA_BiFPN_head_5inp.yaml
@@ -42,19 +42,19 @@ backbone:
 head:
 #BiFPN BLOCK 1
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #27
-  - [[-1, 25], 1, Concat, [1]] # 28 1024+512 = 1536
+  - [[-1, 25], 1, BiFPN_Concat2, [1]] # 28 1024+512 = 1536
   - [-1, 3, DWC3k2, [512]] # 29 128
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #30
-  - [[-1, 24], 1, Concat, [1]] # 31
+  - [[-1, 24], 1, BiFPN_Concat2, [1]] # 31
   - [-1, 3, DWC3k2, [256]] # 32
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #33
-  - [[-1, 22], 1, Concat, [1]] # 34
+  - [[-1, 22], 1, BiFPN_Concat2, [1]] # 34
   - [-1, 3, DWC3k2, [128]] # 35
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #36
-  - [[-1, 20], 1, Concat, [1]] # 37
+  - [[-1, 20], 1, BiFPN_Concat2, [1]] # 37
   - [-1, 3, DWC3k2, [64]] # 38
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #39
@@ -70,7 +70,7 @@ head:
   - [-1, 3, DWC3k2, [1024, True]] # 47
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #48
-  - [[-1, 26], 1, Concat, [1]] # 49
+  - [[-1, 26], 1, BiFPN_Concat2, [1]] # 49
   - [-1, 3, DWC3k2, [1024, True]] # 50
 
 # #BiFPN Block 2
