--- a/ultralytics/cfg/models/Test/swin_conv_DWC3k2_ECA_BiFPN_head_5inp.yaml
+++ b/ultralytics/cfg/models/Test/swin_conv_DWC3k2_ECA_BiFPN_head_5inp.yaml
@@ -74,37 +74,70 @@ head:
   - [-1, 3, DWC3k2, [1024, True]] # 50
 
 # #BiFPN Block 2
-#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #37
-#   - [[-1, 33], 1, Concat, [1]] # 38
-#   - [-1, 3, DWC3k2, [512]] # 39
 
-#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #40
-#   - [[-1, 30], 1, Concat, [1]] # 41
-#   - [-1, 3, DWC3k2, [256]] # 42
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #51
+  - [[-1, 47], 1, BiFPN_Concat2, [1]] # 52
+  - [-1, 3, DWC3k2, [512]] # 29 53
 
-#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #43
-#   - [[-1, 39, 33], 1, BiFPN_Concat3, [1]] # 44
-#   - [-1, 3, DWC3k2, [512, True]] # 45
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #54
+  - [[-1, 44], 1, BiFPN_Concat2, [1]] # 55
+  - [-1, 3, DWC3k2, [256]] # 56
 
-#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #46
-#   - [[-1, 36], 1, Concat, [1]] # 47
-#   - [-1, 3, DWC3k2, [1024, True]] # 48
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #57
+  - [[-1, 41], 1, BiFPN_Concat2, [1]] # 58
+  - [-1, 3, DWC3k2, [128]] # 59
 
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #60
+  - [[-1, 38], 1, BiFPN_Concat2, [1]] # 61
+  - [-1, 3, DWC3k2, [64]] # 62
+
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #63
+  - [[-1, 41, 59], 1, BiFPN_Concat3, [1]] # 64
+  - [-1, 3, DWC3k2, [128, True]] # 65
+  
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #66
+  - [[-1, 44, 56], 1, BiFPN_Concat3, [1]] # 67
+  - [-1, 3, DWC3k2, [512, True]] # 68
+  
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #69
+  - [[-1, 47, 53], 1, BiFPN_Concat3, [1]] # 70
+  - [-1, 3, DWC3k2, [1024, True]] # 71
+
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #72
+  - [[-1, 50], 1, BiFPN_Concat2, [1]] # 73
+  - [-1, 3, DWC3k2, [1024, True]] # 74
+  
 # #BiFPN BLock 3
-#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #49
-#   - [[-1, 45], 1, Concat, [1]] # 50
-#   - [-1, 3, DWC3k2, [512]] # 51
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #75
+  - [[-1, 71], 1, BiFPN_Concat2, [1]] # 76
+  - [-1, 3, DWC3k2, [512]] # 29 77
 
-#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #52
-#   - [[-1, 42], 1, Concat, [1]] # 53
-#   - [-1, 3, DWC3k2, [256]] # 54
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #78
+  - [[-1, 68], 1, BiFPN_Concat2, [1]] # 79
+  - [-1, 3, DWC3k2, [256]] # 80
 
-#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #55
-#   - [[-1, 51, 45], 1, BiFPN_Concat3, [1]] # 56
-#   - [-1, 3, DWC3k2, [512, True]] # 57
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #81
+  - [[-1, 65], 1, BiFPN_Concat2, [1]] # 82
+  - [-1, 3, DWC3k2, [128]] # 83
 
-#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #58
-#   - [[-1, 48], 1, Concat, [1]] # 59
-#   - [-1, 3, DWC3k2, [1024, True]] # 60
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #84
+  - [[-1, 62], 1, BiFPN_Concat2, [1]] # 85
+  - [-1, 3, DWC3k2, [64]] # 86
 
-  - [[38, 41, 44, 47, 50], 1, Detect, [nc]] # 61
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #87
+  - [[-1, 65, 83], 1, BiFPN_Concat3, [1]] # 88
+  - [-1, 3, DWC3k2, [128, True]] # 89
+  
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #90
+  - [[-1, 68, 75], 1, BiFPN_Concat3, [1]] # 91
+  - [-1, 3, DWC3k2, [512, True]] # 92
+  
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #93
+  - [[-1, 71, 77], 1, BiFPN_Concat3, [1]] # 94
+  - [-1, 3, DWC3k2, [1024, True]] # 95
+
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #96
+  - [[-1, 74], 1, BiFPN_Concat2, [1]] # 97
+  - [-1, 3, DWC3k2, [1024, True]] # 98
+
+  - [[98, 95, 92, 89, 86], 1, Detect, [nc]] # 99
