--- a/ultralytics/cfg/models/Test/swin_conv_DWC3k2_ECA_BiFPN_head_5inp.yaml
+++ b/ultralytics/cfg/models/Test/swin_conv_DWC3k2_ECA_BiFPN_head_5inp.yaml
@@ -107,37 +107,37 @@ head:
   - [[-1, 50], 1, BiFPN_Concat2, [1]] # 73
   - [-1, 3, DWC3k2, [1024, True]] # 74
   
-# #BiFPN BLock 3
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #75
-  - [[-1, 71], 1, BiFPN_Concat2, [1]] # 76
-  - [-1, 3, DWC3k2, [512]] # 29 77
+# # #BiFPN BLock 3
+#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #75
+#   - [[-1, 71], 1, BiFPN_Concat2, [1]] # 76
+#   - [-1, 3, DWC3k2, [512]] # 29 77
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #78
-  - [[-1, 68], 1, BiFPN_Concat2, [1]] # 79
-  - [-1, 3, DWC3k2, [256]] # 80
+#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #78
+#   - [[-1, 68], 1, BiFPN_Concat2, [1]] # 79
+#   - [-1, 3, DWC3k2, [256]] # 80
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #81
-  - [[-1, 65], 1, BiFPN_Concat2, [1]] # 82
-  - [-1, 3, DWC3k2, [128]] # 83
+#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #81
+#   - [[-1, 65], 1, BiFPN_Concat2, [1]] # 82
+#   - [-1, 3, DWC3k2, [128]] # 83
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #84
-  - [[-1, 62], 1, BiFPN_Concat2, [1]] # 85
-  - [-1, 3, DWC3k2, [64]] # 86
+#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #84
+#   - [[-1, 62], 1, BiFPN_Concat2, [1]] # 85
+#   - [-1, 3, DWC3k2, [64]] # 86
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #87
-  - [[-1, 65, 83], 1, BiFPN_Concat3, [1]] # 88
-  - [-1, 3, DWC3k2, [128, True]] # 89
+#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #87
+#   - [[-1, 65, 83], 1, BiFPN_Concat3, [1]] # 88
+#   - [-1, 3, DWC3k2, [128, True]] # 89
   
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #90
-  - [[-1, 68, 75], 1, BiFPN_Concat3, [1]] # 91
-  - [-1, 3, DWC3k2, [512, True]] # 92
+#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #90
+#   - [[-1, 68, 75], 1, BiFPN_Concat3, [1]] # 91
+#   - [-1, 3, DWC3k2, [512, True]] # 92
   
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #93
-  - [[-1, 71, 77], 1, BiFPN_Concat3, [1]] # 94
-  - [-1, 3, DWC3k2, [1024, True]] # 95
+#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #93
+#   - [[-1, 71, 77], 1, BiFPN_Concat3, [1]] # 94
+#   - [-1, 3, DWC3k2, [1024, True]] # 95
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #96
-  - [[-1, 74], 1, BiFPN_Concat2, [1]] # 97
-  - [-1, 3, DWC3k2, [1024, True]] # 98
+#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #96
+#   - [[-1, 74], 1, BiFPN_Concat2, [1]] # 97
+#   - [-1, 3, DWC3k2, [1024, True]] # 98
 
-  - [[98, 95, 92, 89, 86], 1, Detect, [nc]] # 99
+  - [[62, 65, 68, 71, 74], 1, Detect, [nc]] # 99
