--- a/ultralytics/cfg/models/Test/swin_conv_DWC3k2_ECA_BiFPN_head_5inp.yaml
+++ b/ultralytics/cfg/models/Test/swin_conv_DWC3k2_ECA_BiFPN_head_5inp.yaml
@@ -108,21 +108,21 @@ head:
   - [-1, 3, DWC3k2, [1024, True]] # 74
   
 # # #BiFPN BLock 3
-#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #75
-#   - [[-1, 71], 1, BiFPN_Concat2, [1]] # 76
-#   - [-1, 3, DWC3k2, [512]] # 29 77
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #75
+  - [[-1, 71], 1, BiFPN_Concat2, [1]] # 76
+  - [-1, 3, DWC3k2, [512]] # 77
 
-#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #78
-#   - [[-1, 68], 1, BiFPN_Concat2, [1]] # 79
-#   - [-1, 3, DWC3k2, [256]] # 80
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #78
+  - [[-1, 68], 1, BiFPN_Concat2, [1]] # 79
+  - [-1, 3, DWC3k2, [256]] # 80
 
-#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #81
-#   - [[-1, 65], 1, BiFPN_Concat2, [1]] # 82
-#   - [-1, 3, DWC3k2, [128]] # 83
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #81
+  - [[-1, 65], 1, BiFPN_Concat2, [1]] # 82
+  - [-1, 3, DWC3k2, [128]] # 83
 
-#   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #84
-#   - [[-1, 62], 1, BiFPN_Concat2, [1]] # 85
-#   - [-1, 3, DWC3k2, [64]] # 86
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #84
+  - [[-1, 62], 1, BiFPN_Concat2, [1]] # 85
+  - [-1, 3, DWC3k2, [64]] # 86
 
 #   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #87
 #   - [[-1, 65, 83], 1, BiFPN_Concat3, [1]] # 88
@@ -140,4 +140,4 @@ head:
 #   - [[-1, 74], 1, BiFPN_Concat2, [1]] # 97
 #   - [-1, 3, DWC3k2, [1024, True]] # 98
 
-  - [[62, 65, 68, 71, 74], 1, Detect, [nc]] # 99
+  - [[86, 83, 80, 77, 74], 1, Detect, [nc]] # 99
