--- a/ultralytics/cfg/models/Test/swin_conv_DWC3k2_ECA_BiFPN_head_5inp.yaml
+++ b/ultralytics/cfg/models/Test/swin_conv_DWC3k2_ECA_BiFPN_head_5inp.yaml
@@ -124,20 +124,20 @@ head:
   - [[-1, 62], 1, BiFPN_Concat2, [1]] # 85
   - [-1, 3, DWC3k2, [64]] # 86
 
-#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #87
-#   - [[-1, 65, 83], 1, BiFPN_Concat3, [1]] # 88
-#   - [-1, 3, DWC3k2, [128, True]] # 89
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #87
+  - [[-1, 65, 83], 1, BiFPN_Concat3, [1]] # 88
+  - [-1, 3, DWC3k2, [128, True]] # 89
   
-#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #90
-#   - [[-1, 68, 75], 1, BiFPN_Concat3, [1]] # 91
-#   - [-1, 3, DWC3k2, [512, True]] # 92
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #90
+  - [[-1, 68, 80], 1, BiFPN_Concat3, [1]] # 91
+  - [-1, 3, DWC3k2, [512, True]] # 92
   
-#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #93
-#   - [[-1, 71, 77], 1, BiFPN_Concat3, [1]] # 94
-#   - [-1, 3, DWC3k2, [1024, True]] # 95
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #93
+  - [[-1, 71, 77], 1, BiFPN_Concat3, [1]] # 94
+  - [-1, 3, DWC3k2, [1024, True]] # 95
 
-#   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #96
-#   - [[-1, 74], 1, BiFPN_Concat2, [1]] # 97
-#   - [-1, 3, DWC3k2, [1024, True]] # 98
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #96
+  - [[-1, 74], 1, BiFPN_Concat2, [1]] # 97
+  - [-1, 3, DWC3k2, [1024, True]] # 98
 
-  - [[86, 83, 80, 77, 74], 1, Detect, [nc]] # 99
+  - [[86, 89, 92, 95, 98], 1, Detect, [nc]] # 99
