--- a/ultralytics/cfg/models/Test/conv_DWC3k2.yaml
+++ b/ultralytics/cfg/models/Test/conv_DWC3k2.yaml
@@ -1,8 +1,8 @@
 nc: 2
 scales:
   # n: [0.50, 0.25, 1024] 
-  # s: [0.50, 0.50, 1024] 
-  m: [0.50, 1.00, 512] 
+  s: [0.50, 0.50, 1024] 
+  # m: [0.50, 1.00, 512] 
   # l: [1.00, 1.00, 512] 
   # x: [1.00, 1.50, 512] 
   
@@ -23,18 +23,18 @@ backbone:
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #11
   - [[-1, 7], 1, Concat, [1]] # 12 1024+512 = 1536
-  - [-1, 3, C3k2, [512]] # 13 128
+  - [-1, 3, DWC3k2, [512]] # 13 128
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #14
   - [[-1, 4], 1, Concat, [1]] # 15
-  - [-1, 3, C3k2, [256]] # 16
+  - [-1, 3, DWC3k2, [256]] # 16
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #17
   - [[-1, 13], 1, Concat, [1]] #18
-  - [-1, 3, C3k2, [512, True]] #19
+  - [-1, 3, DWC3k2, [512, True]] #19
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #20
   - [[-1, 10], 1, Concat, [1]] # 21
-  - [-1, 3, C3k2, [1024, True]] # 22
+  - [-1, 3, DWC3k2, [1024, True]] # 22
 
   - [[22, 19, 16], 1, Detect, [nc]] # 23
