--- a/ultralytics/cfg/models/Test/conv_DWC3k2.yaml
+++ b/ultralytics/cfg/models/Test/conv_DWC3k2.yaml
@@ -9,14 +9,14 @@ scales:
 backbone:
   - [-1, 1, nn.Identity, []] #0  
     # CNN
-  - [0, 1, Conv, [64, 3, 2]] # 1 (1, 64, 320, 320) - (16)
-  - [-1, 1, Conv, [128, 3, 2]] # 2 (1, 128, 160, 160) - (32)
+  - [0, 1, DWConv, [64, 3, 2]] # 1 (1, 64, 320, 320) - (16)
+  - [-1, 1, DWConv, [128, 3, 2]] # 2 (1, 128, 160, 160) - (32)
   - [-1, 2, DWC3k2, [256, False, 0.25]] # 3 (1, 256, 80, 80) - (64)
-  - [-1, 1, Conv, [256, 3, 2]] # 4 (1, 256, 80, 80) - (64) - multiscale 1
+  - [-1, 1, DWConv, [256, 3, 2]] # 4 (1, 256, 80, 80) - (64) - multiscale 1
   - [-1, 2, DWC3k2, [512, False, 0.25]] #5 (1, 512, 40, 40) - (128)
-  - [-1, 1, Conv, [512, 3, 2]] # 6 (1, 512, 40, 40) - (128)
+  - [-1, 1, DWConv, [512, 3, 2]] # 6 (1, 512, 40, 40) - (128)
   - [-1, 2, DWC3k2, [512, True]] #7 (1, 512, 40, 40) - (128) - multiscale 2
-  - [-1, 1, Conv, [1024, 3, 2]] # 8 (1, 1024, 20, 20) - (256)
+  - [-1, 1, DWConv, [1024, 3, 2]] # 8 (1, 1024, 20, 20) - (256)
   - [-1, 2, DWC3k2, [1024, True]] #9 (1, 1024, 20, 20) - (256)
   - [-1, 1, SPPF, [1024, 5]] #10 multisclae 3
 
